@@ -110,7 +110,7 @@ span.userid {
 }
 
 a.userid {
-    color: 102050;
+    color: a0a0cf;
 }
 
 a.help-link {
